# rust-generic-http-router

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md
examples/: routes.json  simple_server.rs
src/: config.rs  error.rs  handler.rs  lib.rs  request.rs  response.rs
