[package]
name = "generic-http-router"
version = "0.1.0"
edition = "2024"
description = "A generic HTTP router that loads routes from a JSON configuration, framework agnostic, made with Rust."
authors = ["Carlos J. Ramirez <cramirez@genericsuite.com>"]
repository = "https://github.com/tomkat-cr/rust-generic-http-router"
documentation = "https://docs.rs/rust-generic-http-router"
license = "MIT"

[dependencies]
# For HTTP types (Request, Response, StatusCode, etc.)
http = "0.2.9"

# For high-performance, radix-tree based routing with path parameters
matchit = "0.7.2"

# For deserializing the JSON configuration file
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# For ergonomic error handling
thiserror = "1.0"

[dev-dependencies]
# A lightweight, async runtime for running the example server
tokio = { version = "1", features = ["full"] }

# A fast and correct HTTP implementation for the example server
hyper = { version = "0.14", features = ["full"] }
